added new logos

--- a/app.json
+++ b/app.json
@@ -4,11 +4,11 @@
     "slug": "NutriGuide",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/logo.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/icon.png",
+      "image": "./assets/logo.png",
       "resizeMode": "contain",
       "backgroundColor": "#27ae60"
     },
@@ -18,13 +18,18 @@
     "android": {
       "package": "com.nextgenx.nutriguide",
       "adaptiveIcon": {
-        "foregroundImage": "./assets/icon.png",
+        "foregroundImage": "./assets/logo.png",
         "backgroundColor": "#27ae60"
       },
       "edgeToEdgeEnabled": true
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "e5806997-bd9f-4b15-8c83-d8a5d6c2a30a"
+      }
     }
   }
 }
